feat: add breadcrumbs to password screens (#96)