@@ -26,6 +26,7 @@ import jakarta.validation.constraints.NotNull;
 import org.projectcheckins.annotations.GetHtml;
 import org.projectcheckins.annotations.PostForm;
 import org.projectcheckins.bootstrap.Alert;
+import org.projectcheckins.bootstrap.Breadcrumb;
 import org.projectcheckins.security.PasswordService;
 import org.projectcheckins.security.RegisterService;
 import org.projectcheckins.security.RegistrationCheckViolationException;
@@ -34,6 +35,7 @@ import org.projectcheckins.security.constraints.ValidToken;
 import java.net.URI;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @Controller
@@ -45,6 +47,7 @@ class SecurityController {
     private static final String MODEL_PASSWORD_FORGOT_FORM = "forgotPasswordForm";
     private static final String MODEL_PASSWORD_RESET_FORM = "resetPasswordForm";
     private static final String MODEL_ALERT = "alert";
+    private static final String MODEL_BREADCRUMBS = "breadcrumbs";
 
     // LOGIN
     private static final String ACTION_LOGIN = "login";
@@ -77,6 +80,14 @@ class SecurityController {
     private static final String VIEW_CHANGED_PASSWORD = PATH + "/passwordChanged.html";
     private static final String VIEW_PASSWORD_FORGOT = PATH + "/" + ACTION_PASSWORD_FORGOT + ".html";
     private static final String VIEW_PASSWORD_RESET = PATH + "/" + ACTION_PASSWORD_RESET + ".html";
+
+    // BREADCRUMBS
+    public static final Message MESSAGE_PASSWORD_CHANGE = Message.of("Change password", "profile.changePassword");
+    public static final Breadcrumb BREADCRUMB_HOME = new Breadcrumb(Message.of("Home", "home"), "/");
+    public static final Breadcrumb BREADCRUMB_PROFILE_SHOW = new Breadcrumb(Message.of("Profile", "profile.show"), "/profile/show");
+    public static final Breadcrumb BREADCRUMB_PASSWORD_CHANGE_ACTIVE = new Breadcrumb(MESSAGE_PASSWORD_CHANGE);
+    public static final Breadcrumb BREADCRUMB_PASSWORD_CHANGE = new Breadcrumb(MESSAGE_PASSWORD_CHANGE, PATH_PASSWORD_CHANGE);
+    public static final Breadcrumb BREADCRUMB_PASSWORD_CHANGED = new Breadcrumb(Message.of("Password Changed", "nav.passwordChanged"));
 
     private final FormGenerator formGenerator;
     private final RegisterService registerService;
@@ -133,7 +144,8 @@ class SecurityController {
     Map<String, Object> changePassword(@NonNull Authentication authentication) {
         final PasswordForm passwordForm = new PasswordForm(authentication);
         final Form form = formGenerator.generate(PATH_PASSWORD_UPDATE, passwordForm);
-        return Map.of(MODEL_PASSWORD_FORM, form);
+        return Map.of(MODEL_PASSWORD_FORM, form,
+                MODEL_BREADCRUMBS, List.of(BREADCRUMB_HOME, BREADCRUMB_PROFILE_SHOW, BREADCRUMB_PASSWORD_CHANGE_ACTIVE));
     }
 
     @PostForm(uri = PATH_PASSWORD_UPDATE, rolesAllowed = SecurityRule.IS_AUTHENTICATED)
@@ -142,7 +154,8 @@ class SecurityController {
         final String userId = form.userId();
         if (userId.equals(authentication.getName())) {
             this.passwordService.updatePassword(userId, form.password());
-            return HttpResponse.ok().body(new ModelAndView<>(VIEW_CHANGED_PASSWORD, Collections.emptyMap()));
+            return HttpResponse.ok().body(new ModelAndView<>(VIEW_CHANGED_PASSWORD, Map.of(
+                    MODEL_BREADCRUMBS, List.of(BREADCRUMB_HOME, BREADCRUMB_PROFILE_SHOW, BREADCRUMB_PASSWORD_CHANGE, BREADCRUMB_PASSWORD_CHANGED))));
         }
         return HttpResponse.seeOther(URI_LOGIN);
     }
@@ -201,7 +214,8 @@ class SecurityController {
             }
             final PasswordForm passwordForm = new PasswordForm(authentication);
             final Form form = formGenerator.generate(PATH_PASSWORD_UPDATE, passwordForm, ex);
-            final Map<String, Object> model = Collections.singletonMap(MODEL_PASSWORD_FORM, form);
+            final Map<String, Object> model = Map.of(MODEL_PASSWORD_FORM, form,
+                    MODEL_BREADCRUMBS, List.of(BREADCRUMB_HOME, BREADCRUMB_PROFILE_SHOW, BREADCRUMB_PASSWORD_CHANGE, BREADCRUMB_PASSWORD_CHANGED));
             return HttpResponse.ok().body(new ModelAndView<>(VIEW_PASSWORD_CHANGE, model));
         } else if (request.getPath().equals(PATH_PASSWORD_FORGOT)) {
             return request.getBody(ForgotPasswordForm.class)
